--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ Pipfile.lock
 main.html
 
 # Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
+**/__pycache__/
+**.py[cod]
 *$py.class
 
 # C extensions
